# v9

./: .dockerignore  .gitignore  AGENTS.md  BUILD.bazel  BUILDING.md  MODULE.bazel  Makefile  README.md  TODO.md  a.PATCH  b.PATCH  buf.gen.yaml  build-emscripten.sh  emscripten-toolchain.cmake  go.mod  go.sum  package-lock.json  package.json
.github/workflows/: browser-tests.yml  ci-image.yml  ci.yml  ecr-publish.yml  live-site-tests.yml  nightly-soak.yml  pages.yml  release-v9-net.yml  release.yml  wasm-rebuild.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  bootstrap.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle
bountynet/: index.html  package-lock.json  package.json  vite.config.js
bountynet/src/: main.js  (+1 more)
command_filter/: LANGUAGE.md  README.md
demo/: image-to-ascii-demo.mjs
docker/: Dockerfile  Dockerfile.ci  compose.yaml  entrypoint.sh
docs/: BUILD_TOOLCHAIN.md  BVISOR_API_EVALUATION.md  CAPABILITY_MODEL.md  COMPATIBILITY_MATRIX.md  CONTRACT_HOSTS.md  NODEJS_IN_TAB_ROADMAP.md  NODEJS_SURFACE_SPEC.md  PARSEC_STATUS.md  PROCESS_LIFECYCLE.md  RUN_IN_TAB.md  TRANSPORT.md  index.html
extension/: manifest.json  rules.json
grpc_exec/: BUILD.bazel  README.md  grpc_exec.proto  tunnel.go  tunnel_test.go
grpc_exec/cmd/grpc_exec/: BUILD.bazel  grpc_exec_test.go  main.go
grpc_exec/cmd/grpc_execd/: BUILD.bazel  grpc_execd_test.go  main.go
grpc_exec/server/: BUILD.bazel  server.go  server_test.go
infra/: artifact-cache.cfn.yml  codebuild-soak.cfn.yml  deploy.sh  ecr.cfn.yml  runner.cfn.yml
mcpmux/: BUILD.bazel  README.md  SPEC.md  main.go
mcpmux/internal/integration/: BUILD.bazel  proxy_test.go
mcpmux/internal/mcpmux/: BUILD.bazel  child.go  child_test.go  namespace.go  namespace_test.go  proxy.go  proxy_test.go
napi-bridge/: assert-exports.js  async-hooks.js  async_hooks-exports.js  browser-builtins.js  buffer-exports.js  bun-bundle-shim.js  child-process.js  child_process-exports.js  constants-exports.js  constants.js  crypto-exports.js  diagnostics-channel-exports.js  dns-exports.js  edgejs.js  eventemitter.js  events-exports.js  fs-exports.js  fs-promises.js  fs.js  git-shim.js  gvisor-net.js  http-exports.js  http.js  http2-exports.js  https-exports.js  index.js  inspector.js  jspi-adapter.js  memfs-esbuild-bundler.mjs  memfs.js  module-exports.js  module-shim.js  net-exports.js  net-stubs.js  node-api-surface.generated.js  node-api-surface.js  node-test-minimal.js  npm-stubs.js  npm.js  os-exports.js  (+41 more)
parsec-engine/: helper-wasm-library.json  index.mjs  language-backends.json
patches/: edgejs-emscripten.patch
sandbox/: BUILD.bazel  jail.txtpb  main.rs  sandbox_test.rs
scripts/: apply-web-import-map.mjs  artifact-sizes.mjs  build-claude-contract-wasm.mjs  build-claude-contract.mjs  build-in-tab-api-contract-wasm.mjs  build-in-tab-api-contract.mjs  build-node-api-surface.mjs  bundle-app-graph.mjs  bundle-claude-for-pages.mjs  bundle-cody.sh  bundle-gemini.sh  bundle-image-to-ascii-demo.mjs  bundle-sdk.sh  bundle-vendor.sh  dev-server.mjs  fetch-wasm-assets.mjs  generate-esm-wrappers.mjs  generate-evidence.mjs  launch-persistent-chrome.mjs  lint-repo.mjs  node-exports-reference.json  parsec-engine.mjs  prepare-github-pages.mjs  release-gate.mjs  run-with-env.mjs  vendor-wasm.mjs  verify-pages-site.mjs  write-build-edge-shim.mjs
test/: interactions.mjs  smoke-live.mjs
tests/: benchmark-jspi.mjs  browser-cli-smoke.mjs  browser-interactivity.mjs  browser-network-test.mjs  jspi-benchmark-report.json  manifest.snapshot.json  pages-validation.mjs  run-oneshot.mjs  test-basic.mjs  test-browser-smoke-contract.mjs  test-browser-smoke.mjs  test-bundle-app-graph.mjs  test-claude-contract-browser.mjs  test-claude-contract-wasm.mjs  test-conformance-env-alias.mjs  test-device-farm-pages.mjs  test-dynamic-port.html  test-dynamic-port.mjs  test-guardrails.mjs  test-import-map-consistency.mjs  test-manifest.mjs  test-memfs-dynamic-import-cycle.mjs  test-memfs-esm-entry.mjs  test-memfs-esm-tla.mjs  test-memfs-import-meta-and-dynamic.mjs  test-memfs-multi-package-app.mjs  test-memfs-node-modules-seed.mjs  test-memfs-node-test-in-tab.mjs  test-memfs-reference-app.mjs  test-napi-bridge.mjs  test-native-addon-reject.mjs  test-node-api-surface.mjs  test-node-in-tab-contract.mjs  test-node-test-runner.mjs  test-package-exports-resolve.mjs  test-pages-oauth-flow.mjs  test-parsec-engine.mjs  test-release-gate.mjs  test-run-in-tab.mjs  test-run-node-entry-argv.mjs  (+14 more)
wasi-shims/: INVENTORY.md  README.md  expected_imports.syms  napi-emscripten-library.js  wasi-additional-fixes.h  wasi-all-fixes.h  wasi-bytecodes-builtins-list.h  wasi-comprehensive-fixes.h  wasi-consolidated-fixes.h  wasi-cppgc-stubs.h  wasi-cppheap-pointer-table-stub.h  wasi-emscripten-mmap-overrides.cc  wasi-external-pointer-compat.h  wasi-filesystem-stubs.h  wasi-minimal-fixes.h  wasi-namespace-fixes.h  wasi-node-compat.h  wasi-platform-fixes.h  wasi-pointer-assertions.h  wasi-runtime-profiler-fixes.h  wasi-shims-index.h  wasi-simdutf-compat.h  wasi-simdutf-stubs.h  wasi-system-compat.h  wasi-v8-api-additions.h  wasi-v8-api-stubs.h  wasi-v8-base-includes.h  wasi-v8-bits-fixes.h  wasi-v8-complete-missing.h  wasi-v8-complete-types.h  wasi-v8-custom-arguments.h  wasi-v8-essential-constants.h  wasi-v8-flags-fix.h  wasi-v8-initialization-functions.h  wasi-v8-internals-constants.h  wasi-v8-internals-minimal.h  wasi-v8-internals.h  wasi-v8-isolate-extensions.h  wasi-v8-lazy-instance-fix.h  wasi-v8-minimal-missing.h  (+10 more)
wasm-tls/: .gitignore  build.sh  wolfssl-glue.c
web/: claude-contract-browser.html  cors-proxy-worker.js  index.html  node-api-importmap.generated.json  node-polyfills.js  nodejs-in-tab-contract.html  nodejs-in-tab-import-map.json  oauth-bridge.html  pages-proxy-default.js  terminal.js  transport-defaults-stare.js  v9-net-test.html
(+358 files in other folders)
