# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

# ---------------------------------------------------------------------------
# Proto codegen — Rust types from nsjail's config.proto via genrule.
#
# We use a genrule + protoc-gen-prost rather than rust_prost_library because
# the latter's prost runtime is private and not importable by consumers.
# ---------------------------------------------------------------------------

genrule(
    name = "nsjail_proto_gen",
    srcs = ["@nsjail//:config.proto"],
    outs = ["nsjail.rs"],
    cmd = "$(location @protobuf//:protoc)" +
          " --plugin=protoc-gen-prost=$(location @crates//:protoc-gen-prost__protoc-gen-prost)" +
          " --prost_out=$(@D)" +
          " -I $$(dirname $(location @nsjail//:config.proto))" +
          " $(location @nsjail//:config.proto)",
    tools = [
        "@crates//:protoc-gen-prost__protoc-gen-prost",
        "@protobuf//:protoc",
    ],
)

rust_library(
    name = "nsjail_proto",
    srcs = [":nsjail_proto_gen"],
    crate_name = "nsjail",
    deps = ["@crates//:prost"],
)

# ---------------------------------------------------------------------------
# Base jail config — converted from text proto to binary proto at build time,
# embedded in the Rust binary via include_bytes!().
# ---------------------------------------------------------------------------

genrule(
    name = "jail_config_pb",
    srcs = [
        "jail.txtpb",
        "@nsjail//:config.proto",
    ],
    outs = ["jail_config.pb"],
    cmd = "$(location @protobuf//:protoc)" +
          " --encode=nsjail.NsJailConfig" +
          " -I $$(dirname $(location @nsjail//:config.proto))" +
          " $(location @nsjail//:config.proto)" +
          " < $(location jail.txtpb) > $@",
    tools = ["@protobuf//:protoc"],
)

# ---------------------------------------------------------------------------
# File descriptor set for prost-reflect text proto serialization.
# ---------------------------------------------------------------------------

genrule(
    name = "config_descriptor",
    srcs = ["@nsjail//:config.proto"],
    outs = ["config_descriptor.pb"],
    cmd = "$(location @protobuf//:protoc)" +
          " --descriptor_set_out=$@" +
          " --include_imports" +
          " -I $$(dirname $(location @nsjail//:config.proto))" +
          " $(location @nsjail//:config.proto)",
    tools = ["@protobuf//:protoc"],
)

# ---------------------------------------------------------------------------
# sandbox binary
# ---------------------------------------------------------------------------

rust_binary(
    name = "sandbox",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    compile_data = [
        ":jail_config_pb",
        ":config_descriptor",
        "@nsjail//:nsjail",
    ],
    rustc_env = {
        "JAIL_CONFIG_PB": "$(execpath :jail_config_pb)",
        "CONFIG_DESCRIPTOR": "$(execpath :config_descriptor)",
        "NSJAIL_BIN": "$(execpath @nsjail//:nsjail)",
    },
    deps = [
        ":nsjail_proto",
        "@crates//:clap",
        "@crates//:libc",
        "@crates//:prost",
        "@crates//:prost-reflect",
    ],
)

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------

rust_test(
    name = "sandbox_test",
    srcs = ["sandbox_test.rs"],
    data = [":sandbox"],
    env = {"AGENT_SANDBOX_BIN": "$(rootpath :sandbox)"},
    tags = ["local"],
    deps = [
        "@crates//:googletest",
        "@crates//:tempfile",
    ],
)
