# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "grpc_execd_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/agent-shell-tools/grpc_exec/cmd/grpc_execd",
    deps = [
        "//grpc_exec:grpc_exec_go_proto",
        "//grpc_exec/server",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "grpc_execd",
    embed = [":grpc_execd_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "grpc_execd_test",
    srcs = ["grpc_execd_test.go"],
    data = [":grpc_execd"],
    env = {"GRPC_EXECD_BIN": "$(rlocationpath :grpc_execd)"},
    tags = ["local"],
    deps = [
        "//grpc_exec:grpc_exec_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@rules_go//go/runfiles",
    ],
)
