# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mcpmux",
    srcs = [
        "child.go",
        "namespace.go",
        "proxy.go",
    ],
    importpath = "github.com/google/agent-shell-tools/mcpmux/internal/mcpmux",
    visibility = ["//mcpmux:__subpackages__"],
    deps = ["@com_github_modelcontextprotocol_go_sdk//mcp"],
)

go_test(
    name = "mcpmux_test",
    srcs = [
        "child_test.go",
        "namespace_test.go",
        "proxy_test.go",
    ],
    data = [
        "//mcpmux/internal/testbin/crashserver",
        "//mcpmux/internal/testbin/echoserver",
    ],
    embed = [":mcpmux"],
    deps = [
        "@com_github_modelcontextprotocol_go_sdk//mcp",
        "@rules_go//go/runfiles",
    ],
)
